[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/black.png" type="Texture" id=2]
[ext_resource path="res://Objects/UI/ScoreFont.tres" type="BitmapFont" id=3]
[ext_resource path="res://Objects/UI/ButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://Sounds/Menu.wav" type="AudioStream" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.27451 )
margin_right = 1048.0
margin_bottom = 648.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.67451 )
margin_right = 1048.0
margin_bottom = 648.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 424.0
margin_right = 234.0
margin_bottom = 464.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "New      game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 472.0
margin_right = 234.0
margin_bottom = 512.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 520.0
margin_right = 200.0
margin_bottom = 560.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "exit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="focus_entered" from="StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="OptionsButton" to="." method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="ExitButton" to="." method="_on_ExitButton_focus_entered"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
